@@ -2327,32 +2327,42 @@ static void rpmfiBuildFNames(Header h, rpmTag tagN,
  * Retrieve file paths.
  * @param h		header
  * @retval *he		tag container
+ * @param tag		RPMTAG_BASENAMES or RPMTAG_ORIGBASENAMES
  * @return		0 on success
  */
-static int _fnTag(Header h, HE_t he)
+static int _fnTag(Header h, HE_t he, rpmTag tag)
 	/*@globals internalState @*/
 	/*@modifies he, internalState @*/
 {
     he->t = RPM_STRING_ARRAY_TYPE;
-    rpmfiBuildFNames(h, he->tag, &he->p.argv, &he->c);
+    rpmfiBuildFNames(h, tag, &he->p.argv, &he->c);
+fprintf(stderr, "*** %s(%d) %p[%u]\n", tagName(he->tag), he->t, he->p.ptr, he->c);
     he->freeData = 1;
     return 0;
+}
+
+static int filenamesTag(Header h, HE_t he)
+	/*@globals internalState @*/
+	/*@modifies he, internalState @*/
+{
+    he->tag = tagValue("Filenames");
+    return _fnTag(h, he, RPMTAG_BASENAMES);
 }
 
 static int filepathsTag(Header h, HE_t he)
 	/*@globals internalState @*/
 	/*@modifies he, internalState @*/
 {
-    he->tag = RPMTAG_BASENAMES;
-    return _fnTag(h, he);
+    he->tag = RPMTAG_FILEPATHS;
+    return _fnTag(h, he, RPMTAG_BASENAMES);
 }
 
 static int origpathsTag(Header h, HE_t he)
 	/*@globals internalState @*/
 	/*@modifies he, internalState @*/
 {
-    he->tag = RPMTAG_ORIGBASENAMES;
-    return _fnTag(h, he);
+    he->tag = RPMTAG_ORIGPATHS;
+    return _fnTag(h, he, RPMTAG_ORIGBASENAMES);
 }
 
 /**
@@ -2576,8 +2586,8 @@ static int filestatTag(Header h, HE_t he)
     /* st_ctime */
     int rc;
 
-    he->tag = RPMTAG_BASENAMES;
-    if ((rc = _fnTag(h, he)) != 0 || he->c == 0)
+    he->tag = RPMTAG_FILEPATHS;
+    if ((rc = _fnTag(h, he, RPMTAG_BASENAMES)) != 0 || he->c == 0)
 	goto exit;
 
 exit:
@@ -4408,7 +4418,7 @@ static struct headerSprintfExtension_s _headerCompoundFormats[] = {
     { HEADER_EXT_TAG, "RPMTAG_NVRA",
 	{ .tagFunction = nvraTag } },
     { HEADER_EXT_TAG, "RPMTAG_FILENAMES",
-	{ .tagFunction = filepathsTag } },
+	{ .tagFunction = filenamesTag } },
     { HEADER_EXT_TAG, "RPMTAG_FILEPATHS",
 	{ .tagFunction = filepathsTag } },
     { HEADER_EXT_TAG, "RPMTAG_ORIGPATHS",
